--- a/sass/layout/_advantades.scss
+++ b/sass/layout/_advantades.scss
@@ -34,7 +34,7 @@
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
-
+  font-size: 14px;
   margin-bottom: 10px;
 
   @media screen and (min-width: 768px) {
