--- a/sass/main.css
+++ b/sass/main.css
@@ -313,7 +313,7 @@ ul {
   position: relative;
 }
 
-.header__item--margin {
+.header__item--mrrt {
   margin-right: 50px;
 }
 
@@ -688,6 +688,7 @@ ul {
   line-height: 1.14;
   text-align: center;
   text-transform: uppercase;
+  font-size: 14px;
   margin-bottom: 10px;
 }
 
